# One-Eval-Public

./: README.md  README_zh.md  pyproject.toml
one-eval-web/src/pages/: Eval.tsx  EvalComponents.tsx
one_eval/: logger.py
one_eval/core/: graph.py  node.py  state.py
one_eval/nodes/: eval.py  nl2bench.py
one_eval/server/: app.py
one_eval/toolkits/: dataflow_eval_tool.py  tool_manager.py
tests/: test_example.py
