[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "one-eval"
description = "A evaluation framework for LLM models"
version = "0.0.0"
authors = [
    { name = "scuuy", email = "scuuy05@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/OpenDCAI/One-Eval"
"Issues" = "https://github.com/OpenDCAI/One-Eval/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["one_eval*"]